Bug #39089 Fix missing error handling in backup code
Submitted: 28 Aug 2008 13:44 Modified: 30 Oct 2008 20:39
Reporter: Oystein Grovlen
Status: Closed
Category:Server: Backup Severity:S3 (Non-critical)
Version: OS:Any
Assigned to: Oystein Grovlen Target Version:6.0-rc
Triage: Triaged: D3 (Medium)

[28 Aug 2008 13:44] Oystein Grovlen
Description:
Rafal has identified several places in the backup code where error handling is missing
(see WL#4384).  This bug report is for fixing this specific issues.

How to repeat:
N/A

Suggested fix:
See WL#4384.
[28 Aug 2008 14:07] Miguel Solorzano
Thank you for the bug report.
[1 Sep 2008 14:54] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/53003

2688 oystein.grovlen@sun.com	2008-09-01
      BUG#39089/WL#4384 Fix missing error handling in backup code.
      Make sure errors returned from functions are reports are handled and/or logged.
[1 Sep 2008 15:03] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/53006

2688 oystein.grovlen@sun.com	2008-09-01
      BUG#39089/WL#4384 Fix missing error handling in backup code.
      Make sure errors returned from functions are reports are handled and/or logged.
[10 Sep 2008 18:38] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/53714

2814 Vladislav Vaintroub	2008-09-10
      Bug#39089: Invalid check for serial_log_directory.
      
      Falcon throws exception telling serial log directory is invalid 
      and refuses to initialize. An attempt was already made to fix
      this error in the past, and even this attempt did not work in
      all cases (root directory on Windows  like C: would not work for example)
      
      Solution presented here is rather simple - we do not check for valid 
      directory at all. If serial log file cannot be opened or created during 
      database creation, the server does not start anyway.
      
      We should not also try to create database if serial log cannot be opened.
      (there will be no loss of data, since we do not overwrite existing files,
      but error message coming from create database is misleading).
      
      Hence, this patch also contains fix to trigger database creation only 
      if falcon_master.fts cannot be opened - trying to create database 
      otherwise makes no sense and in presence of master tablespace going to 
      fail anyway.
[29 Sep 2008 13:37] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/54651

2699 oystein.grovlen@sun.com	2008-09-29
      BUG#39089/WL#4384 Fix missing error handling in backup code.
      Make sure errors returned from functions are reports are handled and/or logged.
[2 Oct 2008 16:36] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/55096

2700 oystein.grovlen@sun.com	2008-10-02
      BUG#39089/WL#4384 Fix missing error handling in backup code.
      Make sure errors returned from functions are reports are handled and/or logged.
[2 Oct 2008 19:27] Rafal Somla
Good to push.
[13 Oct 2008 13:52] Jorgen Loland
Good to push
[14 Oct 2008 14:09] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/56173

2707 oystein.grovlen@sun.com	2008-10-14
      BUG#39089/WL#4384 Fix missing error handling in backup code.
      Make sure errors returned from functions are reports are handled and/or logged.
[15 Oct 2008 10:50] Oystein Grovlen
Pushed into backup team tree.  (Revision 2707)
[30 Oct 2008 13:45] Bugs System
Pushed into 6.0.8-alpha  (revid:oystein.grovlen@sun.com-20081014120856-0k6zhjkekl2xcybb)
(version source revid:jorgen.loland@sun.com-20081015064836-99x6g5wext2zuk9f) (pib:5)
[30 Oct 2008 20:39] Paul DuBois
Noted in 6.0.8 changelog.

MySQL Backup was not handling several errors.