BUG#39089/WL#4384 Fix missing error handling in backup code. Make sure errors returned from functions are reports are handled and/or logged.