sql/backup/backup_info.cc
@@ -5,16 +5,6 @@
   implements algorithm for selecting backup engine used to backup
   given table.
   
-  @todo Fix error detection in places marked with "FIXME: detect errors...". 
-  These are places where functions or methods are called and if they can 
-  report errors it should be detected and appropriate action taken. If callee 
-  never reports errors or we want to ignore errors, a comment explaining this
-  should be added.
-
-  @todo Fix error logging in places marked with "FIXME: error logging...". In 
-  these places it should be decided if and how the error should be shown to the
-  user. If an error message should be logged, it can happen either in the place
-  where error was detected or somewhere up the call stack.
 */
 
 #include "../mysql_priv.h"
@@ -317,14 +307,16 @@ Backup_info::Backup_info(Backup_restore_ctx &ctx)
 
   bzero(m_snap, sizeof(m_snap));
 
-  // FIXME: detect errors if reported.
-  // FIXME: error logging.
-  hash_init(&ts_hash, &::my_charset_bin, 16, 0, 0,
-            Ts_hash_node::get_key, Ts_hash_node::free, MYF(0));
-  // FIXME: detect errors if reported.
-  // FIXME: error logging.
-  hash_init(&dep_hash, &::my_charset_bin, 16, 0, 0,
-            Dep_node::get_key, Dep_node::free, MYF(0));
+  if (hash_init(&ts_hash, &::my_charset_bin, 16, 0, 0,
+                Ts_hash_node::get_key, Ts_hash_node::free, MYF(0))
+      ||
+      hash_init(&dep_hash, &::my_charset_bin, 16, 0, 0,
+                Dep_node::get_key, Dep_node::free, MYF(0)))
+  {
+    // Allocation failed. Error has been reported, but not logged to backup logs
+    m_ctx.log_error(ER_OUT_OF_RESOURCES);
+    return;
+  }
 
   /* 
     Create nodata, default, and CS snapshot objects and add them to the 
@@ -332,35 +324,56 @@ Backup_info::Backup_info(Backup_restore_ctx &ctx)
     element on that list, as a "catch all" entry. 
    */
 
-  snap= new Nodata_snapshot(m_ctx);  // reports errors
-
-  // FIXME: error logging (in case snap could not be allocated).
-  if (!snap || !snap->is_valid())
+  snap= new Nodata_snapshot(m_ctx);             // logs errors
+  if (!snap)
+  {
+    m_ctx.fatal_error(ER_OUT_OF_RESOURCES);
     return;
+  }
 
-  // FIXME: detect errors if reported.
-  // FIXME: error logging.
-  snapshots.push_back(snap);
+  if (!snap->is_valid())
+    return;    // Error has been logged by Nodata_snapshot constructor
 
-  snap= new CS_snapshot(m_ctx); // reports errors
-
-  // FIXME: error logging (in case snap could not be allocated).
-  if (!snap || !snap->is_valid())
+  if (snapshots.push_back(snap))
+  {
+    // Allocation failed. Error has been reported, but not logged to backup logs
+    m_ctx.log_error(ER_OUT_OF_RESOURCES);
     return;
+  }
 
-  // FIXME: detect errors if reported.
-  // FIXME: error logging.
-  snapshots.push_back(snap);
-
-  snap= new Default_snapshot(m_ctx);  // reports errors
-
-  // FIXME: error logging (in case snap could not be allocated).
-  if (!snap || !snap->is_valid())
+  snap= new CS_snapshot(m_ctx);                 // logs errors
+  if (!snap)
+  {
+    m_ctx.fatal_error(ER_OUT_OF_RESOURCES);
     return;
+  }
 
-  // FIXME: detect errors if reported.
-  // FIXME: error logging.
-  snapshots.push_back(snap);
+  if (!snap->is_valid())
+    return;        // Error has been logged by CS_snapshot constructor
+
+  if (snapshots.push_back(snap))
+  {
+    // Allocation failed. Error has been reported, but not logged to backup logs
+    m_ctx.log_error(ER_OUT_OF_RESOURCES);
+    return;                                   // Error has been logged
+  }
+
+  snap= new Default_snapshot(m_ctx);            // logs errors
+  if (!snap)
+  {
+    m_ctx.fatal_error(ER_OUT_OF_RESOURCES);
+    return;
+  }
+
+  if (!snap->is_valid())
+    return;  // Error has been logged by Default_snapshot constructor
+
+  if (snapshots.push_back(snap))
+  {
+    // Allocation failed. Error has been reported, but not logged to backup logs
+    m_ctx.log_error(ER_OUT_OF_RESOURCES);
+    return;                                   // Error has been logged
+  }
 
   m_state= CREATED;
 }
@@ -1297,7 +1310,9 @@ class Backup_info::Global_iterator
 
  public:
 
-  Global_iterator(const Image_info&);
+  Global_iterator(const Backup_info&);
+
+  int init();
 
  private:
 
@@ -1306,14 +1321,24 @@ class Backup_info::Global_iterator
 };
 
 inline
-Backup_info::Global_iterator::Global_iterator(const Image_info &info)
+Backup_info::Global_iterator::Global_iterator(const Backup_info &info)
  :Iterator(info), mode(TABLESPACES), m_it(NULL), m_obj(NULL)
-{
-  // FIXME: detect errors (if NULL returned).
-  m_it= m_info.get_tablespaces();
-  next();       // Note: next() doesn't report errors.
-}
+{}
 
+
+inline
+int Backup_info::Global_iterator::init()
+{
+  m_it= m_info.get_tablespaces();
+  if (!m_it)
+  {
+    const Backup_info* info= static_cast<const Backup_info*>(&m_info);
+    return info->m_ctx.fatal_error(ER_OUT_OF_RESOURCES);
+  }
+  next();                                       // Never errors
+
+  return 0;
+}
 
 inline
 backup::Image_info::Obj*
@@ -1351,6 +1376,14 @@ Backup_info::Global_iterator::next()
     // We have finished enumerating tablespaces, move on to databases.
     mode= DATABASES;
     m_it= m_info.get_dbs();
+    if (!m_it)
+    {
+      const Backup_info* info= static_cast<const Backup_info*>(&m_info);
+      info->m_ctx.fatal_error(ER_OUT_OF_RESOURCES);
+      mode= DONE;
+      return FALSE;
+    }
+
     m_obj= (*m_it)++;
     return m_obj != NULL;
 
@@ -1426,11 +1459,33 @@ bool Backup_info::Perdb_iterator::next()
 /// Wrapper to return global iterator.
 backup::Image_info::Iterator* Backup_info::get_global() const
 {
-  return new Global_iterator(*this);
+  Global_iterator* it = new Global_iterator(*this);
+  if (it == NULL) 
+  {
+    m_ctx.fatal_error(ER_OUT_OF_RESOURCES);
+    return NULL;
+  }    
+  if (it->init())                               // Error has been logged
+  {
+    return NULL;
+  }
+
+  return it;
 }
 
 /// Wrapper to return iterator for per-database objects.
 backup::Image_info::Iterator* Backup_info::get_perdb()  const
 {
-  return new Perdb_iterator(*this);
+  Perdb_iterator* it = new Perdb_iterator(*this);
+  if (it == NULL) 
+  {
+    m_ctx.fatal_error(ER_OUT_OF_RESOURCES);
+    return NULL;
+  }    
+  if (it->init())                               // Error has been logged
+  {
+    return NULL;
+  }
+
+  return it;
 }
